tests/errors/sem.too-many-args.primitive-init.or
main :: () -> void {
    int.{1, 2};
};
